# dns-hijacker

./: '  .gitignore  Cargo.toml  README.md  conf.toml  list.toml  makefile
.github/workflows/: release.yml  test.yml
assets/: 49-dns-hijacker-resolved.rules  SERVICES.md  com.dns-hijacker.plist  dns_hijacker.service  google_ads_list.txt  mac_reload.sh  relay_google_script.js  relay_worker.js
dns_hijacker/: Cargo.toml  README.md
dns_hijacker/src/: cache.rs  handler.rs  lib.rs  logger.rs  main.rs  relay.rs  resolver.rs  tests.rs
logs/: dns_hijaker.log.2026-07-14
resolver_proxy/: Cargo.toml  README.md
scripts/: bench_a_record.sh  build.sh  bump.sh  install_linux.sh
src/: cache.rs  conf.rs  dns.rs  errors.rs  handler.rs  lib.rs  logger.rs  main.rs  metric_wrapper.rs  netguard.rs  relay.rs  resolver.rs  tests.rs
